--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "react": "^16.5.2",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
   },
